--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -8,6 +8,7 @@
 @import url('../../../core/css/stylesheet-helpers.css');
 @import url('../../../core/css/stylesheet-xtras.css');
 @import url('../../../core/css/stylesheet-icons.css');
+@import url('../../../core/js/swiper/swiper-bundle.min.css');
 @import url('../../../core/js/fancybox/fancyboxv4.css');
 @import url('../../../core/css/stylesheet-aurora.css');
 @import url('../../../core/css/stylesheet-print.css');
