--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -13,7 +13,7 @@
 			</article>
 		</pagenotes>
 		<div class="col-12 col-md-6 mt-5">
-			<div class="row">
+			<div class="row justify-content-center">
 				<div class="h3 text-center text-md-left"><a href="news/" aria-label="Go to News">News</a> and <a href="events" aria-label="Go to Events">Events</a></div>
 				<eventsitems items="3">
 					<eventitem>
@@ -55,9 +55,9 @@
 	<section class="jumbotron mt-5">
 		<img class="filter" src="layout/default/images/index-jumbotron.jpg" alt="Index Jumbotron">
   	<header class="mt-5">
-			<h2 class="text-white">Fluid jumbotron</h2>
+			<div class="h2">Fluid jumbotron</div>
 		</header>
-  	<p class="mt-5 text-white">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  	<p class="mt-5">This is a modified jumbotron that occupies the entire horizontal space, and 100% screen height (100vh) of its parent.</p>
 	</section>
 	<settings items="6" contenttype="all">
 	<section class="mt-5 justify-content-center">
