--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -37,7 +37,7 @@
 		<link rel="apple-touch-icon" href="<print meta=favicon>">
 		<link rel="publisher" href="<print meta=url>">
 		<link rel="home" href="<print meta=url>" title="Home page">
-		<link rel="stylesheet" type="text/css" href="<print theme>/css/style.css">
+		<link rel="stylesheet preload" type="text/css" href="<print theme>/css/style.css">
 		<google_analytics>
 	</head>
 	<body id="back-to-top">
