--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -1,15 +1,14 @@
-    </main>
-    <script src="core/js/jquery/jquery.min.js"></script>
-    <script src="core/js/fancybox/fancybox.umd.js"></script>
-    <script src="core/js/js.js"></script>
+    <lightbox>
+    <script defer async src="core/js/js.js"></script>
     <carousel>
     <chatscript>
     <gdpr>
     <map>
-    <g-recaptchascript>
     <serviceworker>
     <countdownscript>
     <forum>
     <banner>
+    <g-recaptchascript>
+    <a11y>
   </body>
 </html>
