Update to v0.2.4 consult CHANGELOG.md

--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -96,6 +96,7 @@
 						</quantity>
 						<div class="my-4 d-block d-md-none text-center">
 							<div class="price"><print content="cost"></div>
+							<div class="quantity"><print content="cartonQuantity"></div>
 							<div class="text-right">
 								<service>
 									<a class="btn" href="bookings/<print content=bookservice>" role="button">Book Now</a>
