--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -50,14 +50,14 @@
 		<aside class="col-12 col-md">
 			<div class="h5 m-0 mt-3 mt-md-0 text-center text-md-left">Payment Options</div>
 			<div class="text-center text-md-left mt-1 pl-0 pl-md-2">
-				<paypal><img class="mt-2 mr-1" src="core/images/paypal.svg" width="85" height="18" alt="PayPal"></paypal>
-				<afterpay><img class="mt-2 mr-1" src="core/images/afterpay.svg" width="85" height="18" alt="AfterPay"></afterpay>
+				<paypal><img class="mt-2 mr-1" loading="lazy" src="core/images/paypal.svg" width="85" height="18" alt="PayPal"></paypal>
+				<afterpay><img class="mt-2 mr-1" loading="lazy" src="core/images/afterpay.svg" width="85" height="18" alt="AfterPay"></afterpay>
 				<creditcards>
 					<div>
-						<img class="mt-2 mr-1" src="core/images/cc-amex.png" width="38" height="23" alt="American Express" title="American Express">
-						<img class="mt-2 mr-1" src="core/images/cc-jcb.png" width="38" height="23" alt="JCB" title="JCB">
-						<img class="mt-2 mr-1" src="core/images/cc-mastercard.png" width="38" height="23" alt="Mastercard" title="Mastercard">
-						<img class="mt-2 mr-1" src="core/images/cc-visa.png" width="38" height="23" alt="Visa" title="Visa">
+						<img class="mt-2 mr-1" loading="lazy" src="core/images/cc-amex.png" width="38" height="23" alt="American Express" title="American Express">
+						<img class="mt-2 mr-1" loading="lazy" src="core/images/cc-jcb.png" width="38" height="23" alt="JCB" title="JCB">
+						<img class="mt-2 mr-1" loading="lazy" src="core/images/cc-mastercard.png" width="38" height="23" alt="Mastercard" title="Mastercard">
+						<img class="mt-2 mr-1" loading="lazy" src="core/images/cc-visa.png" width="38" height="23" alt="Visa" title="Visa">
 					</div>
 				</creditcards>
 			</div>
