--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -21,7 +21,7 @@
 <div class="d-block d-md-none text-center">
 	<a href="<print meta=url>"><img class="mx-auto my-2" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 </div>
-<address class="row mx-0 px-2 pt-2 pt-md-4">
+<address class="row mx-0 px-2 pt-2 pt-md-4 justify-content-center">
 	<aside class="col-12 col-md-4 mt-3 mt-md-2">
 		<email>
 			<div class="row text-center text-md-left">
