--- a/layout/default/search.html
+++ b/layout/default/search.html
@@ -17,13 +17,12 @@
 		</section>
 	</breadcrumb>
 	<section class="row">
-		<article class="col-12">
+		<article class="col-12 mx-auto">
 			<label for="pagesearch" class="h3 m-0">Search</label>
-			<form class="row m-0" method="post" action="search">
-				<input id="pagesearch" class="col-11" type="search" name="search" value="<print search>" placeholder="Enter a Search Term...">
-				<button type="submit" class="col-1">Search</button>
+			<form class="form-row m-0" method="post" action="search">
+				<input id="pagesearch" type="search" name="search" value="<print search>" placeholder="Enter a Search Term...">
+				<button type="submit">Search</button>
 			</form>
-			<settings itemCount="50">
 			<pagination>
 				<div class="row my-5">
 					<nav class="pagination">
