--- a/layout/default/testimonials.html
+++ b/layout/default/testimonials.html
@@ -22,6 +22,7 @@
 			<pagenotes>
 				<h1><print page="heading"></h1>
 				<print page="notes">
+			</pagenotes>
 			<items>
 				<blockquote class="testimonials">
 					<img src="<print content=avatar>" loading="lazy" alt="<print content=name>">
