--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -1,3 +1,4 @@
+<accountnotification>
 <accountmenu>
 	<nav class="account-menu" role="navigation">
 		<input class="menubar-input" type="checkbox" id="administration-menu">
@@ -17,7 +18,6 @@
 		<div class="account-rank badger badge-<print user=cssrank>"><print user="points"> <print user="rank"></div>
 	</nav>
 </accountmenu>
-<activation>
 <div class="d-block d-md-none text-center">
 	<a href="<print meta=url>"><img class="mx-auto my-2" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 </div>
