--- a/core/css/stylesheet-vars.css
+++ b/core/css/stylesheet-vars.css
@@ -66,7 +66,7 @@
   --menu-dropdown-color: #444;
   --menu-dropdown-color-hover: #666;
   --menu-dropdown-background-color: #fff;
-  --menu-dropdown-background-color-hover: #e9e9e9;
+  --menu-dropdown-background-color-hover: #f5f5f5;
   --menu-dropdown-border-color: #e9e9e9;
 
   --sidebar-background-color: #fff;
