--- a/layout/default/contactus.html
+++ b/layout/default/contactus.html
@@ -17,7 +17,7 @@
 			</ol>
 		</nav>
 	</breadcrumb>
-	<section class="row">
+	<section class="row mb-5">
 		<article class="col-12 col-md m-0 p-0 px-3">
 			<pagenotes>
 				<h1><print page="heading"></h1>
