--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -229,7 +229,7 @@
 					</div>
 				</pagination>
 				<items>
-					<article class="card col-11 col-sm-5 mx-auto">
+					<article class="card col-11 col-sm-5 mx-auto my-3">
 						<div class="card-image">
 							<a href="<print content=linktitle>">
 								<img <print content=srcset>src="<print content=thumb>" loading="lazy" alt="<print content=imageALT>">
