--- a/layout/default/css/stylesheet-vars.css
+++ b/layout/default/css/stylesheet-vars.css
@@ -73,8 +73,12 @@
   --button-background-color-disabled: #444;
   --button-border-width: 1px;
   --button-border-width-hover: 1px;
+  --button-border-width-active: 1px;
+  --button-border-width-disabled: 1px;
   --button-border-style: solid;
   --button-border-style-hover: solid;
+  --button-border-style-active: solid;
+  --button-border-style-disabled: solid;
   --button-border-color: #3f6ad8;
   --button-border-color-hover: #2651be;
   --button-border-color-active: #2651be;
@@ -181,23 +185,33 @@
   --gutter-x: 1.5rem;
   --gutter-y: 0;
 
-  --form-border-color: #ced4da;
-  --form-border-color-hover: #007bff;
   --form-background-color:#fff;
-  --form-background-color-hover:#fff;
   --form-background-color-focus: #fff;
   --form-background-color-disabled: #444;
+  --form-border-width: 1px;
+  --form-border-width-focus: 1px;
+  --form-border-width-disabled: 1px;
+  --form-border-style: solid;
+  --form-border-style-focus: solid;
+  --form-border-style-disabled: solid;
+  --form-border-color: #ced4da;
+  --form-border-color-hover: #8bbafe;
+  --form-border-color-focus: #ced4da;
+  --form-border-color-disabled: #888;
   --form-color: #495057;
-  --form-placeholder-color: #aaa;
-  --form-focus-color: #495057;
-  --form-color-hover: #fff;
   --form-color-focus: #000;
   --form-color-disabled: #888;
-  --form-focus-border-color: #8bbafe;
-  --form-focus-shadow: rgba(13, 110, 253, .25);
+  --form-placeholder-color: #aaa;
+  --form-shadow-focus: rgba(13, 110, 253, .25);
   --form-required-color: #dc3545;
   --form-required-border-color: #dc3545;
   --form-focus-required-shadow: rgba(253, 110, 13, .25);
+  --form-input-color: #fff;
+  --form-input-color-checked: #fff;
+  --form-input-background-color: transparent;
+  --form-input-background-color-checked: #0044ff;
+  --form-input-border-color: #ced4da;
+  --form-input-border-color-checked: #ced4da;
   --form-valid-color: #28a745;
   --form-valid-border-color: #28a745;
   --form-valid-shadow: rgba(40, 167, 69, .25);
