--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -16,6 +16,7 @@
 			</li>
 			<li class="d-none d-md-inline-block" role="menuitem"><img class="img-avatar avatar" src="<print user=avatar>" alt="<print user=name>"></li>
 		</ul>
+		<seolook>
 	</nav>
 </accountmenu>
 <div class="d-block d-md-none text-center">
