--- a/core/css/stylesheet-vars.css
+++ b/core/css/stylesheet-vars.css
@@ -125,10 +125,10 @@
 
   --bg-white: #fff;
 
-  --alert-danger-background-color: rgba(250,92,124,.18);
-  --alert-danger-border-color: rgba(250,92,124,.25);
-  --alert-danger-color: #ee5776;
-  --alert-danger-link: #af4057;
+  --alert-danger-background-color: #f8d7da;
+  --alert-danger-border-color: #f5c2c7;
+  --alert-danger-color: #842029;
+  --alert-danger-link: #6a1a21;
   --danger-background-color: #fa5c7c;
   --danger-background-color-hover: #d54e69;
   --danger-border-color: #fa5c7c;
@@ -137,10 +137,10 @@
   --danger-color-contrast: #fff;
   --danger-link: #6a1a21;
   --danger-shadow: 0 2px 6px 0 rgb(250 92 124 / 50%);
-  --alert-dark-background-color: rgba(49,58,70,.18);
-  --alert-dark-border-color: rgba(49,58,70,.25);
-  --alert-dark-color: #2f3743;
-  --alert-dark-link: #222931;
+  --alert-dark-background-color: #d3d3d4;
+  --alert-dark-border-color: #bcbebf;
+  --alert-dark-color: #141619;
+  --alert-dark-link: #101214;
   --dark-background-color: #313a46;
   --dark-background-color-hover: #2a313c;
   --dark-border-color: #313a46;
@@ -149,56 +149,56 @@
   --dark-color-contrast: #fff;
   --dark-link: #101214;
   --dark-shadow: 0 2px 6px 0 rgb(49 58 70 / 50%);
-  --alert-default-background-color: rgba(114,124,245,.18);
-  --alert-default-border-color: rgba(114,124,245,.25);
-  --alert-default-color: #6c76e9;
-  --alert-default-link: #5057ac;
+  --alert-default-background-color: #fefefe;
+  --alert-default-border-color: #fdfdfe;
+  --alert-default-color: #636464;
+  --alert-default-link: #4f5050;
   --default-background-color: #ddd;
   --default-border-color: #ced4da;
   --default-color: #000;
   --default-color-contrast: #fff;
   --default-link: #000;
-  --alert-info-background-color: rgba(57,175,209,.18);
-  --alert-info-border-color: rgba(57,175,209,.25);
-  --alert-info-color: #36a6c7;
-  --alert-info-link: #287b92;
+  --alert-info-background-color: #cff4fc;
+  --alert-info-border-color: #b6effb;
+  --alert-info-color: #055160;
+  --alert-info-link: #04414d;
   --info-background-color: #0dcaf0;
   --info-border-color: #0dcaf0;
   --info-color: #0dcaf0;
   --info-color-contrast: #fff;
   --info-link: #04414d;
-  --alert-light-background-color: rgba(238,242,247,.18);
-  --alert-light-border-color: rgba(238,242,247,.25);
-  --alert-light-color: #e2e6eb;
-  --alert-light-link: #a7a9ad;
+  --alert-light-background-color: #fefefe;
+  --alert-light-border-color: #fdfdfe;
+  --alert-light-color: #636464;
+  --alert-light-link: #4f5050;
   --light-background-color: #f8f9fa;
   --light-border-color: #f8f9fa;
   --light-color: #f8f9fa;
   --light-color-contrast: #fff;
   --light-link: #4f5050;
-  --alert-primary-background-color: rgba(114,124,245,.18);
-  --alert-primary-border-color: rgba(114,124,245,.25);
-  --alert-primary-color: #6c76e9;
-  --alert-primary-link: #5057ac;
+  --alert-primary-background-color: #cfe2ff;
+  --alert-primary-border-color: #b6d4fe;
+  --alert-primary-color: #084298;
+  --alert-primary-link: #06357a;
   --primary-background-color: #0d6efd;
   --primary-border-color: #0d6efd;
   --primary-color: #0d6efd;
   --primary-color-contrast: #fff;
   --primary-link: #06357a;
   --primary-shadow: 0 2px 6px 0 rgb(114 124 245 / 50%);
-  --alert-secondary-background-color: rgba(108,117,125,.18);
-  --alert-secondary-border-color: gba(108,117,125,.25);
-  --alert-secondary-color: #676f77;
-  --alert-secondary-link: #4c5258;
+  --alert-secondary-background-color: #e2e3e5;
+  --alert-secondary-border-color: #d3d6d8;
+  --alert-secondary-color: #41464b;
+  --alert-secondary-link: #34383c;
   --secondary-background-color: #6c757d;
   --secondary-border-color: #6c757d;
   --secondary-color: #6c757d;
   --secondary-color-contrast: #fff;
   --secondary-link: #34383c;
-  --alert-success-background-color: rgba(10,207,151,.18);
-  --alert-success-border-color: rgba(10,207,151,.25);
-  --alert-success-color: #0ac58f;
-  --alert-success-link: #07916a;
+  --alert-success-background-color: #d1e7dd;
+  --alert-success-border-color: #badbcc;
+  --alert-success-color: #0f5132;
+  --alert-success-link: #0c4128;
   --success-background-color: #0acf97;
   --success-background-color-hover: #09b080;
   --success-border-color: #0acf97;
@@ -207,10 +207,10 @@
   --success-color-contrast: #fff;
   --success-link: #0c4128;
   --success-shadow: 0 2px 6px 0 rgb(10 207 151 / 50%);
-  --alert-warning-background-color: rgba(255,188,0,.18);
-  --alert-warning-border-color: rgba(255,188,0,.25);
-  --alert-warning-color: #f2b300;
-  --alert-warning-link: #b38400;
+  --alert-warning-background-color: #fff3cd;
+  --alert-warning-border-color: #ffecb5;
+  --alert-warning-color: #664d03;
+  --alert-warning-link: #523e02;
   --warning-background-color: #ffc107;
   --warning-border-color: #ffc107;
   --warning-color: #ffc107;
