--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -17,6 +17,7 @@
 		<link rel="alternate" type="application/rss+xml" href="<print meta=rss>">
 		<link rel="canonical" href="<print meta=canonical>">
 		<link rel="alternate" href="<print meta=canonical>" hreflang="en-AU">
+		<link rel="alternate" href="<print meta=canonical>" hreflang="x-default">
 		<link rel="author" href="humans.txt">
 		<link rel="icon" href="<print meta=favicon>" type="image/png">
 		<schemaWebsite>
