--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -11,10 +11,8 @@
 				<li role="menuitem"><a href="<print administrationLink>">Administration</a></li>
 			</administration>
 			<li role="menuitem"><form method="post" action="<print currenturl>"><input type="hidden" name="act" value="logout"><button type="submit" role="link">Logout</button></form></li>
-			<li role="menuitem">
-				<span class="badger badge-<print user=cssrank>"><print user="points"> <print user="rank"></span>
-			</li>
 			<li class="d-none d-md-inline-block" role="menuitem"><img class="img-avatar avatar" src="<print user=avatar>" alt="<print user=name>"></li>
+			<li role="menuitem"><span class="badger badge-<print user=cssrank>"><print user="points"> <print user="rank"></span></li>
 		</ul>
 		<seolook>
 	</nav>
