--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -110,13 +110,11 @@
 							<listitems>
 								<div id="<print list=code>" class="card col-12 mx-0 my-1 m-sm-3">
 									<div class="row">
-										<listimage>
-											<div class="card-image col-12 col-sm-4">
-												<a data-fancybox="facts" href="<print list=image>" data-caption="&lt;h5&gt;<print list=heading>&lt;/h6&gt;<print list=caption>">
-													<img src="<print list=image>" alt="<print list=imagealt>">
-												</a>
+										<listmedia>
+											<div class="col-12 col-sm-5 list-images-<print list=imagecount>">
+												<listmediaitems>
 											</div>
-										</listimage>
+										</listmedia>
 										<div class="card-footer col-12 col-sm">
 											<div class="row">
 												<div class="col-12">
