--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -45,7 +45,7 @@
 						<choices>
 						<addtocart>
 							<points><small class="points d-block mb-3 text-center">Earn <print content="points"> points when purchasing this item.</small></points>
-							<button class="addCart btn-block mt-3" data-cartid="<print content=id>" data-cartchoice="0">Buy Now</button>
+							<button class="addCart btn-block mt-3" data-cartid="<print content=id>">Buy Now</button>
 						</addtocart>
 						<condition>
 							<div class="content-condition col-12 mt-3 text-left">Condition: <print content="condition"></div>
