--- a/layout/default/quickview.html
+++ b/layout/default/quickview.html
@@ -1,54 +1,60 @@
 <div class="row">
-  <div class="col-12 col-sm p-0 p-sm-3">
+  <div class="col-12 col-md p-0 p-sm-3">
     <div class="row">
       <figure class="quickview-image col-12 col-sm p-0">
-        <img id="quickview-image" src="<print content=image>" loading="lazy" alt="<print content=imageALT>">
+        <img id="quickview-image<print content=id>" src="<print content=image>" loading="lazy" alt="<print content=imageALT>">
       </figure>
       <quickviewallthumbs>
-        <div class="quickview-thumbs col-12 col-sm-1 p-0">
+        <div class="quickview-thumbs quickview-image-<print content=id> col-12 col-sm-1 p-0">
           <div class="row justify-content-center">
-            <img class="col-2 col-sm-12 m-0 mb-1 p-0 active" src="<print content=thumb>" data-image="<print content=image>" loading="lazy" alt="<print content=imageALT>" onclick="quickview(`<print content=image>`,this);">
+            <img class="col-2 col-sm-12 m-0 mb-1 p-0 active" src="<print content=thumb>" data-image="<print content=image>" loading="lazy" alt="<print content=imageALT>" onclick="quickview(`<print content=id>`,`<print content=image>`,this);">
             <quickviewthumbs>
-              <img class="col-2 col-sm-12 m-0 mb-1 p-0" src="<print thumbs=thumb>" data-image="<print thumbs=image>" loading="lazy" alt="<print thumbs=imageALT>" onclick="quickview(`<print thumbs=image>`,this);">
+              <img class="col-2 col-sm-12 m-0 mb-1 p-0" src="<print thumbs=thumb>" data-image="<print thumbs=image>" loading="lazy" alt="<print thumbs=imageALT>" onclick="quickview(`<print content=id>`,`<print thumbs=image>`,this);">
             </quickviewthumbs>
           </div>
         </div>
       </quickviewallthumbs>
     </div>
   </div>
-  <div class="col-12 col-sm m-0 p-3">
+  <div class="col-12 col-md m-0 p-3">
     <h4><print content="title"></h4>
-    <div class="price text-center"><print content="cost"></div>
-    <div class="row small">
-      <condition>
-        <div class="col-12 text-left small">Condition: <print content="condition"></div>
-      </condition>
-      <weight>
-        <div class="col-12 text-left small">Weight: <print content="weight"></div>
-      </weight>
-      <size>
-        <div class="col-12 text-left small">
-          Width: <print content="width"> X
-          Height: <print content="height"> X
-          Length: <print content="length">
+    <div class="row">
+      <div class="col-12 col-md">
+        <div class="price text-center"><print content="cost"></div>
+        <div class="row small">
+          <condition>
+            <div class="col-12 text-left small">Condition: <print content="condition"></div>
+          </condition>
+          <weight>
+            <div class="col-12 text-left small">Weight: <print content="weight"></div>
+          </weight>
+          <size>
+            <div class="col-12 text-left small">
+              Width: <print content="width"> X
+              Height: <print content="height"> X
+              Length: <print content="length">
+            </div>
+          </size>
+          <brand>
+            <div class="content-brand text-center"><print brand></div>
+          </brand>
         </div>
-      </size>
-      <brand>
-        <div class="content-brand text-center"><print brand></div>
-      </brand>
+      </div>
+      <div class="col-12 col-md">
+        <div class="quickview-choices row mt-2">
+          <choices>
+        </div>
+        <addtocart>
+          <points><small class="points d-block mb-3 text-center">Earn <print content="points"> points when purchasing this item.</small></points>
+          <div class="text-right">
+            <button class="addCart mt-3" data-cartid="<print content=id>" data-cartchoice="0">Add to Cart</button>
+          </div>
+        </addtocart>
+      </div>
     </div>
     <div class="quickview-body">
       <print content="notes">
     </div>
-    <div class="quickview-choices row mt-2">
-      <choices>
-    </div>
-    <addtocart>
-      <points><small class="points d-block mb-3 text-center">Earn <print content="points"> points when purchasing this item.</small></points>
-      <div class="text-right">
-        <button class="addCart mt-3" data-cartid="<print content=id>" data-cartchoice="0">Add to Cart</button>
-      </div>
-    </addtocart>
   </div>
   <footer class="col-12 quickview-footer p-2 py-0 my-0">
     <div class="row">
